<resources>
    <string name="app_name">DairyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="submit">SUBMIT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="rCode">Reference Code</string>
    <string name="createaccount">Create Account</string>
    <string name="login">Login</string>
    <string name="checkText">Creating an account means you’re okay with our Terms of Service, Privacy Policy, and our default Notification Settings.</string>
    <string name="milk_collection">Milk Collection</string>
    <string name="milk_sale">Milk \nSale</string>
    <string name="session_report">Session Report</string>
    <string name="payment">Payment</string>
    <string name="item_sale">Item \nSale</string>
    <string name="notes">Notes</string>
    <string name="add">ADD</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="michal_john">Michal John</string>
    <string name="home">Home</string>
    <string name="accounts">Accounts</string>
    <string name="allaccount">All Accounts</string>
    <string name="addaccount">Add Account</string>
    <string name="bankaccount">Bank Accounts</string>
    <string name="address">ADDRESS</string>
    <string name="phone_no">PHONE NO.</string>
    <string name="mobile">MOBILE</string>
    <string name="upi_gst">UPI/GST</string>
    <string name="task">Task</string>
    <string name="milkcollection">Milk Collection</string>
    <string name="milksale">Milk Sale</string>
    <string name="item_sal">Item Sale</string>
    <string name="add_new">Add New</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="fat">FAT</string>
    <string name="shift">Shift</string>
    <string name="cattle">Cattle</string>
    <string name="snf">SNF</string>
    <string name="vendor_number">Vendor No.</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="clr">CLR</string>
    <string name="weight">Weight</string>
    <string name="amount">Amount</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="item_name">Item Name</string>
    <string name="units">Units</string>
    <string name="rate">Rate</string>
    <string name="quantity">Quantity</string>
    <string name="payments">Payments</string>
    <string name="bill_number">Bill No.</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="amo">Amo</string>
    <string name="stoke_update">Stoke Update</string>
    <string name="type">Type</string>
    <string name="dispatch">Dispatch</string>
    <string name="dairy_code">Dairy Code</string>
    <string name="avg_fat">AVG FAT</string>
    <string name="avg_clr">AVG CLR</string>
    <string name="no_of_cans">No of cans</string>
    <string name="avg_snf">AVG SNF</string>
    <string name="deduction">Deduction</string>
    <string name="bonus">Bonus</string>
    <string name="cow_min_fat">Cow Min fat</string>
    <string name="per_unit">Per unit</string>
    <string name="cost">Cost</string>
    <string name="cow_min_snf">Cow Min snf</string>
    <string name="buf_min_fat">Buf Min fat</string>
    <string name="buf_min_snf">Buf Min snf</string>
    <string name="cow">Cow</string>
    <string name="buffalo">Buffalo</string>
    <string name="mark_all">Mark All</string>
    <string name="unmarkall">Unmark All</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="purchase_report">Purchase Report</string>
    <string name="sale_report">Sale Report</string>
    <string name="item_sale_report">Item Sale Report</string>
    <string name="payment_report">Payment Report</string>
    <string name="stock_report">Stock Report</string>
    <string name="union_sale_report">Union Sale Report</string>
    <string name="reports">Reports</string>
    <string name="firm_name">Firm name</string>
    <string name="item_type">Item type</string>
    <string name="daily_report">Daily Report</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="quan">Quan</string>
    <string name="dairy">Dairy</string>
    <string name="rate_management">Rate Management</string>
    <string name="import_rate">Import Rate</string>
    <string name="flat_rate">Flat Rate</string>
    <string name="advanced_rate">Advanced Rate</string>
    <string name="switch_to_chart">Switch to Chart</string>
    <string name="cow_milk_rate">cow milk rate</string>
    <string name="buffalo_milk_rate">Buffalo milk Rate</string>
    <string name="vendor_code">Vendor code</string>
    <string name="database_management">Database Management</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="settings_tools"><![CDATA[Settings & Tools]]></string>
    <string name="help_desk">Help Desk</string>
    <string name="version_23_45_2_45_starter_powered_by_dairy_management">Version: 23.45.2.45 (Starter), Powered by dairy management</string>
    <string name="language">Language</string>
    <string name="analyser_data">Analyser data</string>
    <string name="weighing_scale">Weighing Scale</string>
    <string name="edit_snf_formula">Edit SNF formula</string>
    <string name="format_date_and_time">Format Date and Time</string>
    <string name="edit_username">Edit Username</string>
    <string name="edit_password">Edit Password</string>
</resources>