<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:weightSum="2"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/fname"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/custom_edt_bg">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/_10sdp"
                        android:inputType="textEmailAddress"
                        android:background="@null"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/lname"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/custom_edt_bg">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/_10sdp"
                        android:inputType="textEmailAddress"
                        android:background="@null"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:text="@string/email"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_edt_bg">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/_10sdp"
                android:inputType="textEmailAddress"
                android:background="@null"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:weightSum="2"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/phone_number"/>

                <LinearLayout
                    android:id="@+id/lnFName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/custom_edt_bg">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/_10sdp"
                        android:inputType="textEmailAddress"
                        android:background="@null"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/rCode"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/custom_edt_bg">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/_10sdp"
                        android:inputType="textEmailAddress"
                        android:background="@null"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:text="@string/password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_edt_bg">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/_10sdp"
                android:inputType="textEmailAddress"
                android:background="@null"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:text="@string/c_password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_edt_bg">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/_10sdp"
                android:inputType="textPassword"
                android:maxLength="6"
                android:background="@null"/>
        </LinearLayout>
     <CheckBox
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat_light"
         android:layout_gravity="start"
         android:gravity="start"
         android:text="@string/checkText"/>
        <LinearLayout
            android:id="@+id/nextBtn"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button_bg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/createaccount"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</layout>