<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
     android:background="@drawable/splash_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/lnUper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280sdp"
            android:orientation="vertical">



            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_news"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/vp_slider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp" />

                <LinearLayout
                    android:id="@+id/ll_dots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:orientation="horizontal"></LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:background="#CC448FD5"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_weight="2"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/milkimage" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:text="@string/milk_collection"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8sdp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="2"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/milksaleimage" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:text="@string/milk_sale"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="2"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/sessionimage" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:text="@string/session_report"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8sdp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="2"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/paymentimage" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_6sdp"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:text="@string/payment"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8sdp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="2"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/itemsale" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:text="@string/item_sale"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8sdp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lnUper"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/notes"/>
            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/custom_edt_grey_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp">
                <EditText
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"/>

            </LinearLayout>
            <Button
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/colorYellow"
                android:textColor="@color/white"
                android:text="@string/add"/>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</layout>